--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.profiles.active=dev
+spring.data.rest.base-path=/data-api
+security.user.name=buzz
+security.user.password=infinity
+spring.datasource.generate-unique-name=false
+spring.datasource.name=vbookstore
