--- a/app/src/main/resources/application-dev.properties
+++ b/app/src/main/resources/application-dev.properties
@@ -1,4 +1,9 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/bookstore_dev
-spring.jpa.hibernate.ddl-auto=update
 logging.level.root=DEBUG
+spring.data.rest.base-path=/data-api
+security.user.name=buzz
+security.user.password=infinity
+spring.datasource.generate-unique-name=false
+spring.datasource.name=vbookstore
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
